iss#141 Refactor ArtistRepository and service to work with DTO, cleanup unneeded: ArtistService rework and test: unstable!